# pi_show

./: .gitignore  Cargo.toml  Cargo1.toml  README.md  run.bat  stdweb安装.txt
bind/: attribute.rs  (+7 more)
css_serialize/: Cargo.toml  Web.toml  build.bat
css_serialize/src/: lib.rs  main.rs
css_serialize/static/: index.html
gui/: .gitignore  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  TODO.md  Web.toml  build_asm.bat  gui.md  yoga.bc  yoga.js  使用GUI.md  如何使用及维护GUI.md
gui/pkg_debug/: README.md  package.json  wasmtest.js  wasmtest_bg.wasm
gui/src/: components.rs  lib.rs  main.rs  web_world.rs  world.rs  world_test.rs  yoga.rs
gui/src/bind/: data.rs  debug.rs  info.rs  layout.rs  mod.rs  node.rs  style.rs  text.rs  transform.1.rs  transform.rs
gui/src/bindgen/: data.rs  layout.rs  mod.rs  style.rs
gui/src/component/: calc.rs  color.rs  component_def.rs  math.rs  mod.rs  node.rs  render.rs  transfrom_impl.rs  user.rs  user1.rs  viewport.rs
gui/src/document/: have_web.rs  mod.rs  no_web.rs
gui/src/font/: font_cfg.rs  font_sheet.rs  font_tex.rs  mod.rs  msdf_font.rs  sdf_font.1.rs  sdf_font.rs  sdf_font_old.rs
gui/src/generic_component/: color.rs
gui/src/layout/: bc.rs  layout.rs  mod.bc.rs  mod.rs  unimpl.rs  yoga.rs
gui/src/object2d/: have_web.rs  mod.rs  no_web.rs
gui/src/render/: data.rs  engine.rs  gl.rs  mod.rs  render.rs  render_sdf.rs  render_target.rs  res.rs  res_mgr.rs  shader.rs  vector_sdf.rs
gui/src/render_old/: data.rs  extension.rs  mod.rs  render.rs
gui/src/shaders/: mod.rs  sdf.rs
gui/src/single/: class.rs  dyn_texture.rs  fragment.rs  mod.rs  oct.rs  style_parse.rs
gui/src/system/: box_ubo.rs  char_block.rs  clip.rs  content_box.rs  create_program.rs  defines_change.rs  filter.rs  fps.rs  image.rs  layout.rs  mask_image.rs  mask_img.rs  mod.rs  node_count.rs  oct.rs  opacity.rs  overflow.rs  rect.rs  render.rs  render1.rs  render_old.rs  sdf.rs  sdf_old.rs  shape_render.rs  show.rs  style_mark.rs  text.rs  text_layout.rs  transform_will_change.rs  willchange.rs  world_matrix.rs  world_matrix1.rs  z_system.rs  zindex.rs  zindex1.rs
gui/src/test/: bind.rs  char_2d.rs  mod.rs  render.rs  test_wcs.rs  yoga.rs
gui/src/test_effect/: mod.rs
gui/src/text_layout/: codepoint.rs  font.rs  layout.rs  mod.rs
gui/src/util/: dirty_mark.rs  event.rs  hashmap_default.rs  math.rs  mod.rs  res_mgr.1.rs  res_mgr.rs  style_mark.rs  util.rs  vecmap_default.rs
gui/src/world/: have_web.rs  mod.rs  no_web.rs  shader.rs
gui/src/world_2d/: constant.rs  have_web.rs  mod.rs  no_web.rs
gui/src/world_doc/: font.rs  have_web.rs  mod.rs  no_web.rs
gui/static/: .depend  20045_27852  36779_37232.json  38567_39569.json  bug_log.md  gui.js  hanyi.dfc  hanyi.dft  hanyi.json  index.html  kaiti.dfc  kaiti.dft  test.html  test111.html  test_background_color.html  test_border_color.html  test_border_image.html  test_box_shadow_color.html  test_clip.html  test_color.html  test_image.html  test_insert_before.html  test_query.html  test_sdf.html  test_sdf1.html  test_text.html  test_text1.html  test_transform.html  test_zzz.html  yoga.js
gui/static/bug_test/: bug_001.html  bug_002.html  bug_003.html  bug_006.html  bug_007.html  bug_008.html  bug_009.html  bug_010.html  bug_011.html  bug_012.html  bug_014.html  bug_015.html  bug_016.html  bug_017.html  bug_018.html  bug_020.html  bug_021.html  index.html
gui/static/shader/: canvas_text.js  char_block.rs  clip.js  color.js  image.js  image.rs  init.js  sdf.js  sdf.rs  text.js
gui/static/test_color/: background.html  border.html  box_shadow.html
gui/static/test_image/: border_image.html  bug.html  image.html  test_z.html
gui/static/test_other/: Untitled-1.txt  clip.html  hsv.html  iter_query.html  offsset.1.html  offsset.html  query.html  test.html  test_effect.html  zindex.html
gui/static/test_text/: 21014_21624.json  bug_text.html  bug_yoga.html  demo.1.html  demo.html  dyn1_text.html  dyn_canvas_text.html  dyn_text.html
gui/static/test_transform/: bug_001.html
gui/tests/: test_world_matrix.rs  wcs.rs  webgl.rs  yoga.rs
gui_test_performan/: Cargo.toml  Web.toml  build_asm.bat  test_fetch.txt  test_trucell.txt  yoga.bc  性能优化TODO.md
gui_test_performan/src/: fetch.rs  lib.rs  main.1.rs  main.2.rs  main.rs  test_matrix.rs  trucell.rs  yoga.rs  yoga_unimpl.rs
gui_test_performan/static/: bug_log.md  index.html
gui_test_performan/static/bug_test/: bug_001.html  bug_003.html  bug_010.html  bug_015.html  bug_017.html  bug_020.html  index.html
gui_test_performan/static/shader/: canvas_text.js  char_block.rs  color.js  image.js  mod.rs  msdf.fs  text.js
gui_tool/: Cargo.toml
gui_tool/src/: lib.rs  performance.rs
gui_web/: Cargo.toml  README.md  Web.toml  bug.md  build.bat  build.rs  build_asm.bat  effect.txt  gui的特点.md  三国性能测试.txt
gui_web/exports_macro/: Cargo.toml
gui_web/js/: utils.js
gui_web/src/: bc.rs  class.rs  debug.rs  index.rs  layout.rs  lib.rs  lib_test.rs  main.rs  main1.rs  node.rs  reset_style.rs  rs_call_js.rs  style.rs  style1.rs  text.rs  text_style.rs  transform.rs  world.rs  yoga.rs
gui_web/static/: a_test.html  background_color.html  border.html  border_image.html  box_model.html  bug.html  canvas_text.html  canvas_text_bug.html  clip.html  demo copy 6.html  effect.html  image copy.html  image.html  layout_auto.html  msdf_text.html  remove.html  res_mgr.html  text.html  transform_change.html  transform_will_change.html  yoga.js.mem  z_index_change.html
hal_core/: Cargo.toml
hal_core/src/: lib.rs
hal_derive/: Cargo.toml
hal_derive/examples/: basic.rs  expanded.rs
hal_derive/src/: lib.rs
hal_webgl/: Cargo.toml
hal_webgl/src/: buffer.rs  context.rs  convert.rs  extension.rs  geometry.rs  lib.rs  program.rs  render_target.rs  sampler.rs  shader.rs  shader_cache.rs  state.rs  state_machine.rs  texture.rs  util.rs  webgl_bind.rs
hal_webgl_test/: Cargo.toml
hal_webgl_test/src/: main.rs  test_shader.rs
hal_webgl_test/static/: index.html  run.js
res_mgr_web/: Cargo.toml  README.md  index.html
res_mgr_web/js/: res_utils.js
res_mgr_web/src/: lib.rs
(+282 files in other folders)
