[package]
name = "css_serialize"
version = "0.1.0"
authors = ["sun <530739162@qq.com>"]

[dependencies]
gui = {path="../gui"}
bincode = {path="../../pi_lib/bincode"}
fx_hashmap = {path="../../pi_lib/fx_hashmap"}
stdweb = "0.4.15"
stdweb-derive = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"