
[package]
name = "gui"
version = "0.1.0"
authors = ["wzjsun <530739162@qq.com>"]

[dependencies]
share = { git = "https://github.com/GaiaWorld/pi_lib.git"}
idtree = { git = "https://github.com/GaiaWorld/pi_lib.git"}
flex_layout = { git = "https://github.com/GaiaWorld/pi_lib.git"}
ecs = { git = "https://github.com/GaiaWorld/pi_lib.git"}
ecs_derive = { git = "https://github.com/GaiaWorld/pi_lib.git"}
enum_default_macro = { git = "https://github.com/GaiaWorld/pi_lib.git"}
deque = { git = "https://github.com/GaiaWorld/pi_lib.git"}
slab = { git = "https://github.com/GaiaWorld/pi_lib.git"}
util = { git = "https://github.com/GaiaWorld/pi_lib.git"}
map = { git = "https://github.com/GaiaWorld/pi_lib.git"}
atom = { git = "https://github.com/GaiaWorld/pi_lib.git"}
hash = { git = "https://github.com/GaiaWorld/pi_lib.git"}
heap = { git = "https://github.com/GaiaWorld/pi_lib.git"}
pointer = { git = "https://github.com/GaiaWorld/pi_lib.git"}
ucd = { git = "https://github.com/GaiaWorld/pi_lib.git"}
data_view = { git = "https://github.com/GaiaWorld/pi_lib.git"}
debug_info = { git = "https://github.com/GaiaWorld/pi_lib.git"}
dirty = { git = "https://github.com/GaiaWorld/pi_lib.git"}
densevec = { git = "https://github.com/GaiaWorld/pi_lib.git"}
res = { git = "https://github.com/GaiaWorld/pi_lib.git"}
polygon = { git = "https://github.com/GaiaWorld/pi_math.git"}
cg2d = { git = "https://github.com/GaiaWorld/pi_math.git"}
color = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"] }
cgmath = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"]}
collision = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"]}
octree = { git = "https://github.com/GaiaWorld/pi_math.git"}

hal_core = {path="../hal_core"}
hal_derive = {path="../hal_derive"}
num-traits = "0.2.6"
fnv = "1.0.6"
lazy_static = "*"
stdweb = "0.4.15"
derive_deref = "1.0.2"
paste = "0.1"
serde = { version = "1.0", features = ["derive"] }
ordered-float = { version = "1.0", default-features = false }
fxhash = "0.2.1"

[features]
default = ["warning"]
performance=["web"]
web = []
print = []
warning = []
statistics = []