
[package]
name = "gui"
version = "0.1.0"
authors = ["wzjsun <530739162@qq.com>"]
edition = "2018"

[dependencies]
share = { path = "../../pi_lib/share", features=[]}
idtree_new = { path = "../../pi_lib/idtree_new"}
flex_layout_new = { path =  "../../pi_lib/flex_layout_new"}
# ecs = { path =  "../../pi_lib/ecs"}
# ecs_derive = { path =  "../../pi_lib/ecs_derive"}
enum_default_macro = { path =  "../../pi_lib/enum_default_macro"}
deque = { path =  "../../pi_lib/deque"}
slab_new = { path =  "../../pi_lib/slab_new"}
listener = { path =  "../../pi_lib/listener"}

util = { path =  "../../pi_lib/util"}
map_new = { path =  "../../pi_lib/map_new"}
atom = { path =  "../../pi_lib/atom", features = ["serde"]}
hash = { path =  "../../pi_lib/hash"}
heap = { path =  "../../pi_lib/heap"}
pointer = { path =  "../../pi_lib/pointer"}
ucd = { path =  "../../pi_lib/ucd"}
data_view = { path =  "../../pi_lib/data_view"}
debug_info = { path =  "../../pi_lib/debug_info"}
dirty = { path =  "../../pi_lib/dirty"}
densevec = { path =  "../../pi_lib/densevec"}
res = { path =  "../../pi_lib/res"}
cross_performance = { path =  "../../pi_lib/cross_performance"}
# time: 3407.7350000152364
# vConsole.js:3 now: 3408.0800000810996
# vConsole.js:3 timediff: 0.6900000153109431
# vConsole.js:3 time: 3408.795000053942
# vConsole.js:3 now: 3409.1900000348687
# vConsole.js:3 timediff: 0.7850000401958823
# vConsole.js:3 time: 3409.925000043586
# vConsole.js:3 now: 3410.2800000691786
# vConsole.js:3 timediff: 0.6949999369680882
# vConsole.js:3 time: 3411.2850000383332
# vConsole.js:3 now: 3411.8550000712276
# vConsole.js:3 timediff: 0.9299999801442027
# vConsole.js:3 time: 3412.57000004407
# vConsole.js:3 now: 3412.914999993518
# vConsole.js:3 timediff: 0.6799999391660094
polygon = { path = "../../pi_math/polygon"}
cg2d = { path = "../../pi_math/cg2d"}
spatialtree_new = { path = "../../pi_math/spatialtree_new"}
color = { path = "../../pi_math/color", features = ["serde"]}
# cgmath = { path = "../../pi_math/cgmath", features = ["serde"] }
# collision = { path = "../../pi_math/collision", features = ["serde"]}
# octree = { path = "../../pi_math/octree"}


# polygon = { git = "https://github.com/GaiaWorld/pi_math.git"}
# cg2d = { git = "https://github.com/GaiaWorld/pi_math.git"}
# color = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"] }
# cgmath = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"]}
# collision = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"]}
# octree = { git = "https://github.com/GaiaWorld/pi_math.git"}
bevy_ecs = {git="https://github.com/bevyengine/bevy.git"}

hal_core = {path="../hal_core"}
hal_derive = {path="../hal_derive"}
num-traits = "0.2.6"
fnv = "1.0.6"
lazy_static = "*"
stdweb = "0.4.15"
derive_deref = "1.0.2"
paste = "0.1"
serde = { version = "1.0", features = ["derive"] }
ordered-float = { version = "1.0", default-features = false }
fxhash = "0.2.1"
wasm-bindgen = "*"
nalgebra = {version = "0.24.0", features = ["serde", "serde-serialize"]}
ncollide2d = {version = "0.27.0", features = ["serde"]}
smallvec = "*"
log="*"
bitmaps="*"

[dependencies.web-sys]
version = "*"
features = [
	"WebGlRenderingContext",
	"WebGlBuffer",
	"WebGlVertexArrayObject",
	"WebGlShader",
	"WebGlProgram",
	"WebGlUniformLocation",
	"WebGlActiveInfo",
	"WebGlTexture",
	"WebGlRenderbuffer",
	"WebGlFramebuffer",
	"Window",
	"HtmlCanvasElement",
	"Document",
	"CanvasRenderingContext2d",
	"ImageData",
	"HtmlImageElement",
	"console",
]

[features]
default = ["warning"]
performance=["web"]
web = []
print = []
warning = []
statistics = []

