
[package]
name = "gui"
version = "0.1.0"
authors = ["wzjsun <530739162@qq.com>"]
edition = "2018"

[dependencies]
postcard = {version = "1.0", features = ["use-std"]}
nalgebra = {version = "0.32", features = ["serde", "serde-serialize"]}
pi_atom = { version="0.2", features = ["serde", "pointer_width_32"] }
pi_null = "0.1"
pi_hash = "0.1"
pi_flex_layout = "0.2"
pi_style = {version = "0.1", registry = "yn"}
bitflags = "1.2"
share = { path = "../../pi_lib/share"}
idtree = { path = "../../pi_lib/idtree"}
flex_layout = { path =  "../../pi_lib/flex_layout"}
ecs = { path =  "../../pi_lib/ecs"}
ecs_derive = { path =  "../../pi_lib/ecs_derive"}
enum_default_macro = { path =  "../../pi_lib/enum_default_macro"}
deque = { path =  "../../pi_lib/deque"}
slab = { path =  "../../pi_lib/slab"}
util = { path =  "../../pi_lib/util"}
map = { path =  "../../pi_lib/map"}
# atom = { path =  "../../pi_lib/atom", features = ["serde"]}
hash = { path =  "../../pi_lib/hash"}
heap = { path =  "../../pi_lib/heap"}
pointer = { path =  "../../pi_lib/pointer"}
ucd = { path =  "../../pi_lib/ucd"}
data_view = { path =  "../../pi_lib/data_view"}
debug_info = { path =  "../../pi_lib/debug_info"}
dirty = { path =  "../../pi_lib/dirty"}
densevec = { path =  "../../pi_lib/densevec"}
res = { path =  "../../pi_lib/res"}
cross_performance = { path =  "../../pi_lib/cross_performance"}
rectangle-pack = "0.4.2"
guillotiere = {version="*"}
# time: 3407.7350000152364
# vConsole.js:3 now: 3408.0800000810996
# vConsole.js:3 timediff: 0.6900000153109431
# vConsole.js:3 time: 3408.795000053942
# vConsole.js:3 now: 3409.1900000348687
# vConsole.js:3 timediff: 0.7850000401958823
# vConsole.js:3 time: 3409.925000043586
# vConsole.js:3 now: 3410.2800000691786
# vConsole.js:3 timediff: 0.6949999369680882
# vConsole.js:3 time: 3411.2850000383332
# vConsole.js:3 now: 3411.8550000712276
# vConsole.js:3 timediff: 0.9299999801442027
# vConsole.js:3 time: 3412.57000004407
# vConsole.js:3 now: 3412.914999993518
# vConsole.js:3 timediff: 0.6799999391660094
pi_polygon = "0.1"
pi_cg2d = "0.3"
pi_spatial = "0.5"
pi_slotmap = "0.1"
# pi_spatial = { path = "../../pi_math/pi_spatial"}
color = { path = "../../pi_math/color", features = ["serde"]}
bincode = { path = "../../pi_lib/bincode"}
# cgmath = { path = "../../pi_math/cgmath", features = ["serde"] }
# collision = { path = "../../pi_math/collision", features = ["serde"]}
# octree = { path = "../../pi_math/octree"}


# pi_polygon = { git = "https://github.com/GaiaWorld/pi_math.git"}
# pi_cg2d = { git = "https://github.com/GaiaWorld/pi_math.git"}
# color = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"] }
# cgmath = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"]}
# collision = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["serde"]}
# octree = { git = "https://github.com/GaiaWorld/pi_math.git"}
hal_core = {path="../hal_core", features=["serde"]}
hal_derive = {path="../hal_derive"}
num-traits = "0.2.6"
fnv = "1.0.6"
lazy_static = "*"
derive_deref = "1.0.2"
paste = "0.1"
serde = { version = "1.0", features = ["derive"] }
ordered-float = { version = "3.0", default-features = false, features = ["serde"] }
fxhash = "0.2.1"
wasm-bindgen = "*"
log="*"
smallvec={version = "1.8", features = ["serde"]}
getset="0.1"
bitvec={version = "1.0", features = ["serde"]}
polygon2 = "0.3"
cssparser = "0.29"
pi_print_any="0.1"

[dependencies.web-sys]
version = "*"
features = [
	"WebGlRenderingContext",
	"WebGlBuffer",
	"WebGlVertexArrayObject",
	"WebGlShader",
	"WebGlProgram",
	"WebGlUniformLocation",
	"WebGlActiveInfo",
	"WebGlTexture",
	"WebGlRenderbuffer",
	"WebGlFramebuffer",
	"Window",
	"HtmlCanvasElement",
	"Document",
	"CanvasRenderingContext2d",
	"ImageData",
	"HtmlImageElement",
	"console",
]

[patch.yn]
# pi_curves  = {path="../pi_curves"}
# pi_animation = { path="../pi_animation"}
pi_style = {path = "D://0_rust/pi_style"}

[features]
default = ["warning"]
performance=["web"]
web = []
print = []
warning = []
statistics = []

