[package]
name = "gui_test_performan"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

[dependencies]
atom = {path="../../pi_lib/atom"}
ecs = {path="../../pi_lib/ecs"}
ecs_derive = { path = "../../pi_lib/ecs_derive" }
map = { path = "../../pi_lib/map" }
debug_info = { path = "../../pi_lib/debug_info" }
hal_webgl = {path="../hal_webgl"}
hal_core = {path="../hal_core"}
hal_null = {path="../hal_null"}
serde = { version = "1.0", features = ["derive"] }
cg2d = { path = "../../pi_math/cg2d" }
color = { path = "../../pi_math/color" }
cgmath = { path = "../../pi_math/cgmath" }
octree = { path = "../../pi_math/octree" }
gui = {path="../gui"}
stdweb = "0.4.15"
stdweb-derive = "0.5.1"
webgl-rendering-context = "0.1.0"
lazy_static = "*"
paste = "0.1"
fnv = "1.0.6"

[profile.release]
lto = true
opt-level ="z"
panic = 'abort'
codegen-units = 1

# [features]
# default = ["web"]
# web = []
# print = []