[package]
name = "gui_test_performan"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

[dependencies]
atom = { git = "https://github.com/GaiaWorld/pi_lib.git"}
ecs = { git = "https://github.com/GaiaWorld/pi_lib.git"}
ecs_derive = { git = "https://github.com/GaiaWorld/pi_lib.git"}
map = { git = "https://github.com/GaiaWorld/pi_lib.git"}
debug_info = { git = "https://github.com/GaiaWorld/pi_lib.git"}
hal_webgl = { git = "https://github.com/GaiaWorld/pi_lib.git"}
hal_core = { git = "https://github.com/GaiaWorld/pi_lib.git"}
hal_null = { git = "https://github.com/GaiaWorld/pi_lib.git"}
serde = { git = "https://github.com/GaiaWorld/pi_math.git", features = ["derive"]}
color = { git = "https://github.com/GaiaWorld/pi_math.git"}
cgmath = { git = "https://github.com/GaiaWorld/pi_math.git"}
octree = { git = "https://github.com/GaiaWorld/pi_math.git"}

# gui = {path="../gui"}
stdweb = "0.4.15"
stdweb-derive = "0.5.1"
webgl-rendering-context = "0.1.0"
lazy_static = "*"
paste = "0.1"
fnv = "1.0.6"

# [profile.release]
# lto = true
# opt-level ="z"
# panic = 'abort'
# codegen-units = 1

[features]
default = ["web"]
web = []
print = []