[package]
name = "gui_test_performan"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

[dependencies]
atom = { path = "../../pi_lib/atom"}
ecs = { path = "../../pi_lib/ecs"}
ecs_derive = { path = "../../pi_lib/ecs_derive"}
map = { path = "../../pi_lib/map"}
debug_info = { path = "../../pi_lib/debug_info"}
hal_webgl = { path = "../../pi_lib/hal_webgl"}
hal_core = { path = "../../pi_lib/hal_core"}
hal_null = { path = "../../pi_lib/atom"}
serde = { path = "https://github.com/GaiaWorld/pi_math.git", features = ["derive"]}
color = { path = "https://github.com/GaiaWorld/pi_math.git"}
cgmath = { path = "https://github.com/GaiaWorld/pi_math.git"}
octree = { path = "https://github.com/GaiaWorld/pi_math.git"}

# gui = {path="../gui"}
stdweb = "0.4.15"
stdweb-derive = "0.5.1"
webgl-rendering-context = "0.1.0"
lazy_static = "*"
paste = "0.1"
fnv = "1.0.6"

# [profile.release]
# lto = true
# opt-level ="z"
# panic = 'abort'
# codegen-units = 1

[features]
default = ["web"]
web = []
print = []