
[package]
name = "gui_tool"
version = "0.1.0"
authors = ["wzjsun <530739162@qq.com>"]

[dependencies]
ecs = { git = "https://github.com/GaiaWorld/pi_lib.git"}
ecs_derive = { git = "https://github.com/GaiaWorld/pi_lib.git"}
map = { git = "https://github.com/GaiaWorld/pi_lib.git"}
share = { git = "https://github.com/GaiaWorld/pi_lib.git"}
atom = { git = "https://github.com/GaiaWorld/pi_lib.git"}


gui = { path = "../gui" }
hal_core = { path = "../hal_core" }
lazy_static = "*"
