[package]
name = "hal_core"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
share = { git = "https://github.com/GaiaWorld/pi_lib.git"}
atom = { git = "https://github.com/GaiaWorld/pi_lib.git"}
ordered-float = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }