[package]
name = "hal_derive"
version = "0.4.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
share = { path = "../../pi_lib/share"}

proc-macro2 = "0.4"
syn = "0.15"
quote = "0.6"
lazy_static = "*"
hal_core = {path="../hal_core"}

[[example]]
name = "basic"

[[example]]
name = "expanded"

