[package]
name = "hal_webgl"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

# [lib]
# crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom = { git = "https://github.com/GaiaWorld/pi_lib.git"}
share = { git = "https://github.com/GaiaWorld/pi_lib.git"}
slab = { git = "https://github.com/GaiaWorld/pi_lib.git"}
deque = { git = "https://github.com/GaiaWorld/pi_lib.git"}
hal_core = { git = "https://github.com/GaiaWorld/pi_lib.git"}
hash = { git = "https://github.com/GaiaWorld/pi_lib.git"}
debug_info = { git = "https://github.com/GaiaWorld/pi_lib.git"}

ordered-float = "1.0"
wasm-bindgen = {version="*", features = ["serde-serialize"]}
js-sys = "*"


[dependencies.web-sys]
version = "*"
features = [
	"WebGlRenderingContext",
	"WebGlBuffer",
	"WebGlVertexArrayObject",
	"WebGlShader",
	"WebGlProgram",
	"WebGlUniformLocation",
	"WebGlActiveInfo",
	"WebGlTexture",
	"WebGlRenderbuffer",
	"WebGlFramebuffer",
]

# [features]
# frame_stat = []  # 统计每帧信息的feature