[package]
name = "hal_webgl"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]

# [lib]
# crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom = { path = "../../pi_lib/atom"}
share = { path = "../../pi_lib/share"}
slab = { path = "../../pi_lib/slab"}
deque = { path = "../../pi_lib/deque"}
hash = { path = "../../pi_lib/hash"}
debug_info = { path = "../../pi_lib/debug_info"}

hal_core = { path = "../hal_core"}

ordered-float = "1.0"
wasm-bindgen = {version="*", features = ["serde-serialize"]}
js-sys = "*"


[dependencies.web-sys]
version = "*"
features = [
	"WebGlRenderingContext",
	"WebGlBuffer",
	"WebGlVertexArrayObject",
	"WebGlShader",
	"WebGlProgram",
	"WebGlUniformLocation",
	"WebGlActiveInfo",
	"WebGlTexture",
	"WebGlRenderbuffer",
	"WebGlFramebuffer",
	"console"
]

# [features]
# frame_stat = []  # 统计每帧信息的feature