[package]
name = "hal_webgl_test"
version = "0.1.0"
authors = ["moyy <moyy@yineng.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom={path="../../pi_lib/atom"}
hal_core={path="../hal_core"}
hal_webgl={path="../hal_webgl"}
stdweb = "0.4.15"
stdweb-derive = "0.5.1"
webgl-rendering-context = "0.1.0"