[package]
name = "res_mgr"
version = "0.1.0"
authors = ["sun <sun@yineng.com>"]

[lib]
crate-type = ["cdylib", "rlib", "dylib"]

[dependencies]
res = { git = "https://github.com/GaiaWorld/pi_lib.git"}
share = { git = "https://github.com/GaiaWorld/pi_lib.git"}

wasm-bindgen = "*"


# [features]
# # default = ["no_debug", "no_define_js"]
# # default = ["create_class_by_str"]
# # default = ["no_debug", "share/rc"]
# default = ["debug"]
# # default = ["share/rc", "ecs/runtime"]
# # default = ["debug", "no_debug"]
# debug = ["share/rc", "ecs/runtime"]
# no_debug = []
# no_define_js = []
# create_class_by_str = []